1) Добавил иницифализацию сервера + роутов 2) Чуть изменил спецификацию API
