# internal/routes/consts.go
@@ -1,0 +1,6 @@
+package routes
+
+const (
+	PathQuestionId = "questionId"
+	PathAnswerId   = "answerId"
+)
